--- a/styles/globals.css
+++ b/styles/globals.css
@@ -40,7 +40,7 @@ a {
 
 @layer components {
 	.buttonColor {
-		@apply bg-black/5 dark:bg-white/5  dark:hover:bg-white/10 dark:active:bg-white/20;
+		@apply bg-black/10 dark:bg-white/10  dark:hover:bg-white/[15%] hover:bg-black/[15%] dark:active:bg-white/20  active:bg-black/20;
 	}
 }
 @tailwind utilities;
